tests/ui/failing/issue-60709.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/async-await/issue-60709.rs`
error: expected identifier, found keyword `let`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/async-await/issue-60709.rs:24:9
   |
23 |     let fut = async {
   |               ----- `async` blocks are only allowed in Rust 2018 or later
24 |         let _rc = Rc::new(()); // Also crashes with Arc
   |         ^^^ expected identifier, found keyword
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

warning: unused import: `std::rc::Rc`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/async-await/issue-60709.rs:12:5
   |
12 | use std::rc::Rc;
   |     ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

